feat(debug): multi-cell renderer — cell colors, load labels, chunk columns
Squash-merge of feat/debug-multicell. Server samples per-object ticks within the player's
view distance (TickSampler.frameFor takes a chunk radius); client draws ticked entities/BEs/chunks
colored by their cell's checkerboard color, with two-line labels (duration + colored LOW/MEDIUM/HIGH
load). Heatmap removed. Also ports the dev-side Math.clamp cleanup onto the label-scale line.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>